# trainer

./: Makefile  README.md  pyproject.toml
src/trainer/: main.py  settings.py
