[project]
name = "trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Pinkney", email = "apinkney97@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nrewebservices>=0.2.1",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
trainer = "trainer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
