[project]
name = "trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Pinkney", email = "apinkney97@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "nrewebservices>=0.2.1",
    #     "pydantic-settings>=2.8.1",
    "scrollphat>=0.0.7",
    "smbus>=1.1.post2",
    "suds>=1.1.2",
]

[project.scripts]
trainer = "trainer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff",
]

[tool.mypy]
files = ["src"]
strict = true

[[tool.mypy.overrides]]
module = "scrollphat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nrewebservices.*"
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["I"]

# [[tool.uv.index]]
# name = "piwheels"
# url = "https://www.piwheels.org/simple/"
